new doc(g)
