# models/language.go
@@ -1,0 +1,6 @@
+package models
+
+type Language struct {
+	ID   int    `json:"id,omitempty"`
+	Name string `json:"username"`
+}
