# models/word.go
@@ -1,0 +1,6 @@
+package models
+
+type Word struct {
+	Name     string    `json:"name,omitempty"`
+	Language *Language `json:"language,omitempty"`
+}
